CCQ working with directed T4 generation
commit f80014d80b2c4e36548aeef19475d6e030d3305f
Author: Emiliano Deustua <edeustua@chemistry.msu.edu>
Date:   Mon Dec 31 16:13:21 2018 -0500

    Working directed T4 generation including disconnected terms.

commit 8df5092b078f3b08bdfdec63f33636cd6908a7d6
Author: Emiliano Deustua <edeustua@chemistry.msu.edu>
Date:   Fri Dec 21 18:47:48 2018 -0500

    Directed T4 generation only with existing C4 coefficients.

commit 53a9d0e07e3c7da5a509da718477596270f9c67f
Author: Emiliano Deustua <edeustua@chemistry.msu.edu>
Date:   Thu Dec 20 23:34:30 2018 -0500

    Working optimized version where T4 generation is separated
    by spin cases.

    - Cleaning is required

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,14 @@
-FC := gfortran
-FFLAGS := -O3 -fdefault-integer-8 -m64 -I${MKLROOT}/include -ffree-line-length-none -ffixed-line-length-132 -mtune=native
-FFLAGS_DEBUG := -O0 -fcheck=all -fdefault-integer-8 -m64 -I${MKLROOT}/include -fbacktrace -g -mtune=native -ffixed-line-length-132 -ffree-line-length-none
-LDFLAGS := -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_gf_ilp64.a ${MKLROOT}/lib/intel64/libmkl_gnu_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group -lgomp -lpthread -lm -ldl -luuid
+#FC := gfortran
+#FFLAGS := -O3 -fdefault-integer-8 -m64 -I${MKLROOT}/include -ffree-line-length-none -ffixed-line-length-132 -mtune=native
+#FFLAGS_DEBUG := -O0 -fcheck=all -fdefault-integer-8 -m64 -I${MKLROOT}/include -fbacktrace -g -mtune=native -ffixed-line-length-132 -ffree-line-length-none
+#LDFLAGS := -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_gf_ilp64.a ${MKLROOT}/lib/intel64/libmkl_gnu_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group -lgomp -lpthread -lm -ldl -luuid
 
-@LIOMP := /opt/intel/compilers_and_libraries_2017.4.196/linux/compiler/lib/intel64_lin/libiomp5.a
-@FC := ifort
-@FFLAGS := -O3 -i8 -I${MKLROOT}/include -132  -xCORE-AVX512
-@LDFLAGS := -static-intel -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_intel_ilp64.a ${MKLROOT}/lib/intel64/libmkl_intel_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group ${LIOMP} -lpthread -lm -ldl -luuid
+LIOMP := /opt/intel/compilers_and_libraries_2017.4.196/linux/compiler/lib/intel64_lin/libiomp5.a
+FC := ifort
+#FFLAGS := -O3 -i8 -I${MKLROOT}/include -132  -xCORE-AVX512
+FFLAGS := -O3 -i8 -I${MKLROOT}/include -132  -xCORE-AVX2
+FFLAGS_DEBUG := -O0 -g -traceback -i8 -I${MKLROOT}/include -132  -xCORE-AVX2
+LDFLAGS := -static-intel -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_intel_ilp64.a ${MKLROOT}/lib/intel64/libmkl_intel_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group ${LIOMP} -lpthread -lm -ldl -luuid
 
 CC := gcc
 
@@ -67,7 +69,11 @@ update_cc.o: cc/antisym.o
 # Cluster analysis
 ext_cor/cluster_analysis.o: ext_cor/process_ci.o ext_cor/symmetry.o ext_cor/sys_data.o ext_cor/utilities.o
 
-ext_cor/process_ci.o: printing.o
+ext_cor/directed_t4_analysis.o: ext_cor/sys_data.o ext_cor/ext_cor_types.o
+
+ext_cor/hmatrix.o: ext_cor/ext_cor_types.o determinant.o
+
+ext_cor/process_ci.o: printing.o ext_cor/directed_t4_analysis.o ext_cor/symmetry.o ext_cor/hmatrix.o determinant.o
 
 ext_cor/utilities.o: ext_cor/sys_data.o
 
@@ -88,5 +94,5 @@ clean:
 	@echo Cleaning...
 	rm -f *.a
 	rm -f *.mod */*.mod
-	rm -f $(cc_OBJS) $(main_OBJS) $(ext_cor_OBJS) $(PROGRAM)
+	rm -f $(cc_OBJS) $(main_OBJS) $(ext_cor_OBJS) $(PROGRAM) gen_uuid.o
 	@echo Done.
