ext_cor version with fast determinant manipulations working
- Borrowed modules from HANDE to perform fast determinant manipulations
- Changed the core of the ext_cor folder. Now modules are better
organized, and all system data is obtained through sys_t.
- Although CADFCIQMC appears to be working fine, thus the ext_cor
module, DCSD_MC doesn't produce matching energies (as with Ilias'
calculations).

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,8 @@
 #FC := gfortran
 #FFLAGS := -O3 -fdefault-integer-8 -m64 -I${MKLROOT}/include -ffree-line-length-none -ffixed-line-length-132 -mtune=native
-#FFLAGS_DEBUG := -O0 -fcheck=all -fdefault-integer-8 -m64 -I${MKLROOT}/include -fbacktrace -g -mtune=native -ffixed-line-length-132 -ffree-line-length-none
+#FFLAGS_DEBUG := -O0 -fcheck=all -fdefault-integer-8 -m64 -I${MKLROOT}/include -fbacktrace -g -mtune=native -ffixed-line-length-132 -ffree-line-length-none -mpopcnt
 #LDFLAGS := -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_gf_ilp64.a ${MKLROOT}/lib/intel64/libmkl_gnu_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group -lgomp -lpthread -lm -ldl -luuid
+FEATURES := -DUSE_POPCNT
 
 LIOMP := /opt/intel/compilers_and_libraries_2017.4.196/linux/compiler/lib/intel64_lin/libiomp5.a
 FC := ifort
@@ -52,35 +53,61 @@ gen_uuid.o: gen_uuid.c
 	$(CC) -c -o $@ $<
 
 # Dependencies
-main.o: integrals.o solve_cc.o
 
-cc/antisym.o main.o update_cc.o system.o solve_cc.o parser.o utils.o: const.o
 
-main.o diis.o solve_cc.o parser.o: printing.o
+cc/antisym.o basis_types.o bit_utils.o checking.o determinants.o dgemm.o diis.o excitations.o integrals.o calc_driver.o main.o parser.o printing.o solve_cc.o system.o update_cc.o cc_utils.o utils.o: const.o
+
+bit_utils.o: bit_table_256.o
+
+main.o: integrals.o calc_driver.o
+
+printing.o: system.o
+
+ext_cor/cluster_analysis.o solve_cc.o: energy.o
+
+calc_driver.o proc_pointers.o ext_cor/ext_cor.o determinants.o integrals.o update_cc.o cc_utils.o: system.o
+
+determinants.o: bit_utils.o bit_table_256.o
 
 main.o: parser.o
 
-solve_cc.o: diis.o utils.o update_cc.o ext_cor/cluster_analysis.o
+solve_cc.o: diis.o cc_utils.o update_cc.o ext_cor/cluster_analysis.o
 
-main.o solve_cc.o diis.o integrals.o parser.o printing.o update_cc.o: system.o
+ext_cor/symmetry.o diis.o solve_cc.o parser.o: printing.o
 
 update_cc.o: cc/antisym.o
 
+system.o: basis_types.o ext_cor/ext_cor_types.o
+
+basis_types.o: checking.o
+
+excitations.o: checking.o bit_utils.o
+
+checking.o: utils.o
+
+utils.o: errors.o
+
 # Cluster analysis
-ext_cor/cluster_analysis.o: ext_cor/process_ci.o ext_cor/symmetry.o ext_cor/sys_data.o ext_cor/utilities.o
+ext_cor/utilities.o: system.o
 
-ext_cor/directed_t4_analysis.o: ext_cor/sys_data.o ext_cor/ext_cor_types.o
+ext_cor/cluster_analysis.o: ext_cor/process_ci.o ext_cor/symmetry.o ext_cor/utilities.o ext_cor/t4_generation.o ext_cor/ext_cor.o
 
-ext_cor/hmatrix.o: ext_cor/ext_cor_types.o determinant.o
+ext_cor/directed_t4_analysis.o: ext_cor/ext_cor_types.o excitations.o
 
-ext_cor/process_ci.o: printing.o ext_cor/directed_t4_analysis.o ext_cor/symmetry.o ext_cor/hmatrix.o determinant.o
+ext_cor/t4_generation.o: combinatorics.o checking.o determinants.o
 
-ext_cor/utilities.o: ext_cor/sys_data.o
+ext_cor/process_ci.o: printing.o ext_cor/directed_t4_analysis.o ext_cor/symmetry.o determinants.o ext_cor/utilities.o
 
 
 # Object compiling
 printing.o: printing.F90
 	$(FC) -c $(FFLAGS) -DCOMP_HOST="'$(COMP_HOST)'" -DCOMP_TIME="'$(COMP_TIME)'" -DVERSION="'$(GIT_SHA1)'" -DFLAGS="'$(FFLAGS)'" -o $@ $<
+
+bit_utils.o: bit_utils.F90
+	$(FC) -c $(FFLAGS) $(FEATURES) -o $@ $<
+
+%.o: %.F90
+	$(FC) -c $(FFLAGS) -o $@ $<
 
 %.o: %.f90
 	$(FC) -c $(FFLAGS) -o $@ $<
