Reorganized parser and input file configuration
- Separated keywords into groups
- Set some of the supported methods in get_calc_macros: CCSD, CCSDT,
CCSDTQ, CADFCIQMC, DCSD-MC
- Needs testing

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,15 @@
-#FC := gfortran
-#FFLAGS := -O3 -fdefault-integer-8 -m64 -I${MKLROOT}/include -ffree-line-length-none -ffixed-line-length-132 -mtune=native
-#FFLAGS_DEBUG := -O0 -fcheck=all -fdefault-integer-8 -m64 -I${MKLROOT}/include -fbacktrace -g -mtune=native -ffixed-line-length-132 -ffree-line-length-none -mpopcnt
-#LDFLAGS := -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_gf_ilp64.a ${MKLROOT}/lib/intel64/libmkl_gnu_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group -lgomp -lpthread -lm -ldl -luuid
+FC := gfortran
+FFLAGS := -O3 -fdefault-integer-8 -m64 -I${MKLROOT}/include -ffree-line-length-none -ffixed-line-length-132 -mtune=native
+FFLAGS_DEBUG := -O0 -fcheck=all -fdefault-integer-8 -m64 -I${MKLROOT}/include -fbacktrace -g -mtune=native -ffixed-line-length-132 -ffree-line-length-none -mpopcnt
+LDFLAGS := -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_gf_ilp64.a ${MKLROOT}/lib/intel64/libmkl_gnu_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group -lgomp -lpthread -lm -ldl -luuid
 FEATURES := -DUSE_POPCNT
 
-LIOMP := /opt/intel/compilers_and_libraries_2017.4.196/linux/compiler/lib/intel64_lin/libiomp5.a
-FC := ifort
-#FFLAGS := -O3 -i8 -I${MKLROOT}/include -132  -xCORE-AVX512
-FFLAGS := -O3 -i8 -I${MKLROOT}/include -132  -xCORE-AVX2
-FFLAGS_DEBUG := -O0 -g -traceback -i8 -I${MKLROOT}/include -132  -xCORE-AVX2
-LDFLAGS := -static-intel -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_intel_ilp64.a ${MKLROOT}/lib/intel64/libmkl_intel_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group ${LIOMP} -lpthread -lm -ldl -luuid
+#LIOMP := /opt/intel/compilers_and_libraries_2017.4.196/linux/compiler/lib/intel64_lin/libiomp5.a
+#FC := ifort
+##FFLAGS := -O3 -i8 -I${MKLROOT}/include -132  -xCORE-AVX512
+#FFLAGS := -O3 -i8 -I${MKLROOT}/include -132  -xCORE-AVX2
+#FFLAGS_DEBUG := -O0 -g -traceback -i8 -I${MKLROOT}/include -132  -xCORE-AVX2
+#LDFLAGS := -static-intel -Wl,--start-group ${MKLROOT}/lib/intel64/libmkl_intel_ilp64.a ${MKLROOT}/lib/intel64/libmkl_intel_thread.a ${MKLROOT}/lib/intel64/libmkl_core.a -Wl,--end-group ${LIOMP} -lpthread -lm -ldl -luuid
 
 CC := gcc
 
@@ -65,7 +65,9 @@ printing.o: system.o
 
 ext_cor/cluster_analysis.o solve_cc.o: energy.o
 
-calc_driver.o proc_pointers.o ext_cor/ext_cor.o determinants.o integrals.o update_cc.o cc_utils.o: system.o
+calc_driver.o energy.o proc_pointers.o ext_cor/ext_cor.o determinants.o integrals.o update_cc.o cc_utils.o: system.o
+
+calc_driver.o: cc_utils.o ext_cor/cluster_analysis.o solve_cc.o
 
 determinants.o: bit_utils.o bit_table_256.o
 
@@ -78,6 +80,8 @@ ext_cor/symmetry.o diis.o solve_cc.o parser.o: printing.o
 update_cc.o: cc/antisym.o
 
 system.o: basis_types.o ext_cor/ext_cor_types.o
+
+excitations.o: basis_types.o
 
 basis_types.o: checking.o
 
@@ -94,7 +98,7 @@ ext_cor/cluster_analysis.o: ext_cor/process_ci.o ext_cor/symmetry.o ext_cor/util
 
 ext_cor/directed_t4_analysis.o: ext_cor/ext_cor_types.o excitations.o
 
-ext_cor/t4_generation.o: combinatorics.o checking.o determinants.o
+ext_cor/t4_generation.o: combinatorics.o checking.o determinants.o ext_cor/symmetry.o
 
 ext_cor/process_ci.o: printing.o ext_cor/directed_t4_analysis.o ext_cor/symmetry.o determinants.o ext_cor/utilities.o
 
